Les 5, Les 6, Les 7 erbij

--- a/W2.html
+++ b/W2.html
@@ -30,8 +30,12 @@
         <li class="w-full"><a href="W2.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 2</a></li>
         <li class="w-full"><a href="W3.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 3</a></li>
         <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 4</a></li>
-        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W5.html">Les 5</a></li>
-        
+        <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 5</a></li>
+         <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 6</a></li>
+         <li class="w-full"><a href="W7.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 7</a></li>
+      </ul>
+    
+
       </ul>
     </div>
 
