--- a/W3.html
+++ b/W3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Les 3 | Lost in Trainslation - Schermen verbeteren & feedback</title>
+  <title>Les 3 | Lost in Trainslation</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -30,7 +30,10 @@
         <li class="w-full"><a href="W2.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 2</a></li>
         <li class="w-full"><a href="W3.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 3</a></li>
         <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 4</a></li>
-        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W5.html">Les 5</a></li>
+        <li class="w-full"><a href="W5.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 5</a></li>
+        <li class="w-full"><a href="W6.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 6</a></li>
+        <li class="w-full"><a href="W7.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 7</a></li>
+      </ul>
       </ul>
     </div>
 
@@ -38,11 +41,12 @@
     <main class="flex-1 p-12">
       <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Lost in Trainslation – Schermen verbeteren in Figma & feedback ontvangen</h1>
       <h2 class="text-[#2d2242] font-medium mb-6">Lana van Dessel</h2>
+
       <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 9 oktober 2025</p>
 
       <p class="leading-7 text-[1.05rem] mb-6">
-        Tijdens de derde les van Prototyping Tools kregen we de tijd om verder te werken aan ons Figma-project “Lost in Trainslation”.
-        Het doel was om de bestaande ontwerpen te verbeteren op basis van feedback en om twee nieuwe schermen toe te voegen.
+        Tijdens de derde les van <strong>Prototyping Tools</strong> kregen we de tijd om verder te werken aan ons Figma-project “Lost in Trainslation”.
+        Het doel was om de bestaande ontwerpen te verbeteren op basis van <strong>feedback</strong> en om twee nieuwe schermen toe te voegen.
         Deze les draaide vooral om het toepassen van feedback, het versterken van visuele hiërarchie en het nadenken over hoe een ontwerp
         beter kan communiceren met de gebruiker. Aan het einde kregen we ook een korte introductie tot het vak Software Tools.
       </p>
@@ -58,15 +62,14 @@
             Ik koos ervoor om die te verwijderen en meer te focussen op een strakke lay-out met duidelijke kaders en genoeg witruimte.
           </p>
           <p class="leading-7 mb-4">
-            Daarnaast werkte ik aan het kleurcontrast. De docent gaf aan dat mijn kleuren te licht waren, waardoor de tekst moeilijk leesbaar was.
+            Daarnaast werkte ik aan het <strong>kleurcontrast</strong>. De docent gaf aan dat mijn kleuren te licht waren, waardoor de tekst moeilijk leesbaar was.
             Door donkerdere accenten en contrasterende vlakken toe te voegen, kwam de informatie beter naar voren.
             Ook heb ik verschillende lettergroottes en gewichten getest om de hiërarchie tussen koppen, subkoppen en details te versterken.
           </p>
           <p class="leading-7">
-            Daarna ontwierp ik twee extra schermen: één met route-informatie en één met actuele storingsmeldingen.
+            Daarna ontwierp ik twee extra schermen: één met <strong>route-informatie</strong> en één met <strong>actuele storingsmeldingen</strong>.
             Hierbij gebruikte ik componenten en auto-layout, zodat alles netjes bleef uitgelijnd en makkelijk aan te passen was.
-            Dit hielp me ook om efficiënter te werken. Tot slot nam ik kort deel aan de introductie over Software Tools,
-            waarin we leerden hoe onze ontwerpen later kunnen worden gekoppeld aan echte functionaliteit.
+            Tot slot nam ik kort deel aan de introductie over Software Tools.
           </p>
         </div>
 
@@ -74,22 +77,18 @@
         <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
           <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Reflectie</h3>
           <p class="leading-7 mb-4">
-            Deze les heeft me geleerd hoe waardevol feedback is bij het verbeteren van een ontwerp.
+            Deze les heeft me geleerd hoe waardevol <strong>feedback</strong> is bij het verbeteren van een ontwerp.
             In het begin was ik best tevreden over mijn eerste versie, maar na de opmerkingen van mijn docent zag ik ineens duidelijk
             waar het beter kon. Door mijn ontwerp eenvoudiger te maken, oogt het nu volwassener en sluit het beter aan bij de gebruiker.
           </p>
           <p class="leading-7 mb-4">
             Ook besefte ik dat kleuren, typografie en contrast niet alleen esthetisch zijn, maar vooral functioneel.
             Een goed ontwerp moet informatie begrijpelijk en toegankelijk maken — niet alleen mooi zijn.
-            Het oefenen met contrast en lettertypes heeft me geholpen om meer aandacht te besteden aan leesbaarheid
-            en de manier waarop mensen informatie waarnemen.
           </p>
           <p class="leading-7">
             Voor de volgende les wil ik me focussen op <strong>interactiviteit</strong>.
             Ik wil knoppen en overgangen toevoegen, zodat het ontwerp niet alleen visueel duidelijk is,
-            maar ook echt aanvoelt als een werkend systeem. Daarnaast wil ik mijn ontwerp aan klasgenoten laten testen,
-            om te zien of zij de informatie net zo logisch en duidelijk vinden als ik zelf.
-            Dit zal me helpen om mijn ontwerp nog gebruiksvriendelijker te maken.
+            maar ook echt aanvoelt als een werkend systeem. Daarnaast wil ik mijn ontwerp testen bij klasgenoten.
           </p>
         </div>
       </div>
