--- a/W6.html
+++ b/W6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Les 1 | Lost in Trainslation - Schetsen</title>
+  <title>Les 4 | Tailwind en Figma</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -12,7 +12,8 @@
     h1, h3 { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
-<body class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10">
+
+<body id="top" class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10">
 
   <!-- Container -->
   <div class="flex bg-white rounded-[14px] shadow-md overflow-hidden w-[95%] max-w-[1200px]">
@@ -25,64 +26,65 @@
 
       <ul class="list-none m-0 p-6 bg-[#edeaf5] flex flex-col items-center gap-3 h-full">
         <li class="w-full"><a href="index.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Logboek</a></li>
-        <li class="w-full"><a href="W1.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 1</a></li>
+        <li class="w-full"><a href="W1.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 1</a></li>
         <li class="w-full"><a href="W2.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 2</a></li>
         <li class="w-full"><a href="W3.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 3</a></li>
         <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 4</a></li>
         <li class="w-full"><a href="W5.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 5</a></li>
-        <li class="w-full"><a href="W6.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 6</a></li>
+        <li class="w-full"><a href="W6.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 6</a></li>
         <li class="w-full"><a href="W7.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 7</a></li>
-      </ul>
-      </ul>
     </div>
 
     <!-- Main Page -->
     <main class="flex-1 p-12">
-      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Lost in Trainslation - Schetsen</h1>
+      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Tailwind en Figma</h1>
       <h2 class="text-[#2d2242] font-medium mb-6">Lana van Dessel</h2>
-      <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 18 september 2025</p>
+
+      <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 20 november 2025</p>
 
       <p class="leading-7 text-[1.05rem] mb-6">
-        In deze eerste les van <strong>Prototyping Tools</strong> leerden we wat een prototype is en waarom het belangrijk is.  
-        We kregen de opdracht “Lost in Trainslation”, waarbij we moesten bedenken hoe we informatie op een treinscherm duidelijk konden weergeven.  
-        Het doel was om een overzicht te maken dat voor reizigers makkelijk te begrijpen is.
+        We hebben eerst één uur uitleg gekregen over hoe we onze website in <strong>Tailwind</strong> kunnen omzetten. Daarna kregen we websites waarvan we codes konden overnemen om leuke projecten te maken. Vervolgens kregen we één uur een uitgebreide uitleg over hoe we met <strong>Figma</strong> kunnen werken en kregen we tips over hoe we onze Figma-projecten kunnen verbeteren.
       </p>
 
       <div class="flex flex-wrap gap-6 mt-6">
+
         <!-- Column 1 -->
         <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
-          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Mijn eerste schetsen</h3>
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik heb gedaan</h3>
+
           <p class="leading-7 mb-4">
-            Ik begon met het maken van schetsen op papier. In het begin dacht ik dat ik alles zelf mocht verzinnen,  
-            maar later bleek dat ik een bestaand ontwerp moest verbeteren. Daardoor moest ik even opnieuw beginnen.  
-            Nadat ik de opdracht beter had gelezen en uitleg had gevraagd aan klasgenoten, snapte ik beter wat ik moest doen.  
-            Toen kon ik gericht werken aan een duidelijker ontwerp.
+            Tijdens de les heb ik eerst geleerd hoe je een bestaande website kunt omzetten naar <strong>Tailwind CSS</strong>. Ik heb geoefend met het toevoegen van klassen voor kleuren, typografie, marges en layout. Hierdoor kon ik zien hoe Tailwind direct het uiterlijk van de website verandert zonder veel handmatige CSS te schrijven.
           </p>
-          <p class="leading-7">
-            Tijdens het tekenen merkte ik dat kleine dingen zoals tekstgrootte, kleuren en pictogrammen veel verschil maken.  
-            Een goed ontwerp is niet alleen mooi, maar ook overzichtelijk. Dat vond ik een belangrijk inzicht.
+
+          <p class="leading-7 mb-4">
+            Daarna hebben we websites gekregen waarvan we de code konden overnemen. Ik heb deze voorbeelden aangepast om kleine projecten te maken, wat hielp om de logica en structuur van Tailwind-componenten beter te begrijpen.
+          </p>
+
+          <p class="leading-7 mb-4">
+            In het tweede deel van de les heb ik geleerd hoe je met <strong>Figma</strong> werkt. Ik heb oefening gekregen in het ontwerpen van pagina’s, het aanmaken van componenten, en het toepassen van consistente stijlen. Ook kreeg ik tips om mijn Figma-projecten overzichtelijker en professioneler te maken.
           </p>
         </div>
 
         <!-- Column 2 -->
         <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
-          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik heb geleerd</h3>
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Reflectie</h3>
+
           <p class="leading-7 mb-4">
-            Deze les heeft me geleerd dat goed nadenken vóórdat je begint met tekenen veel tijd scheelt.  
-            Ik weet nu dat het slim is om eerst te begrijpen wat het doel van de opdracht is, voordat je start met het ontwerp zelf.
+            Ik vond het erg nuttig om te leren hoe Tailwind en Figma samenwerken in het webontwikkelingsproces. Tailwind helpt om snel een mooie en consistente website te maken, terwijl Figma ervoor zorgt dat het ontwerp overzichtelijk en professioneel blijft.
           </p>
+
           <p class="leading-7 mb-4">
-            Volgende keer wil ik beter letten op de informatie die ik gebruik en eerst een korte planning maken.  
-            Ook wil ik oefenen met digitale tools zoals Figma, zodat ik mijn schetsen makkelijker kan uitwerken op de computer.
+            Het werken met voorbeeldcode maakte het makkelijker om de theorie direct in praktijk te brengen, en ik merk dat ik nu sneller componenten kan bouwen en aanpassen.
           </p>
+
           <p class="leading-7">
-            Aan het einde van de les had ik een duidelijke schets van mijn treinscherm.  
-            Het was nog niet perfect, maar ik begreep beter hoe ik een idee kan verbeteren.
+            Volgende keer wil ik meer experimenteren met Tailwind en leren hoe ik mijn Figma-ontwerpen nog beter kan vertalen naar een werkende website. Ook wil ik oefenen met het koppelen van design en code zodat alles soepel samenwerkt.
           </p>
         </div>
+
       </div>
     </main>
-
   </div>
+
 </body>
 </html>
