--- a/W7.html
+++ b/W7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage | Lana van Dessel</title>
+  <title>Les 4 | GSM-schermen ontwerpen</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -13,7 +13,7 @@
   </style>
 </head>
 
-<body class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10 font-['Roboto']">
+<body id="top" class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10">
 
   <!-- Container -->
   <div class="flex bg-white rounded-[14px] shadow-md overflow-hidden w-[95%] max-w-[1200px]">
@@ -25,54 +25,63 @@
       </div>
 
       <ul class="list-none m-0 p-6 bg-[#edeaf5] flex flex-col items-center gap-3 h-full">
-        <li class="w-full"><a href="index.html"class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Logboek</a></li>
+        <li class="w-full"><a href="index.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Logboek</a></li>
         <li class="w-full"><a href="W1.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 1</a></li>
         <li class="w-full"><a href="W2.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 2</a></li>
         <li class="w-full"><a href="W3.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 3</a></li>
         <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 4</a></li>
         <li class="w-full"><a href="W5.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 5</a></li>
         <li class="w-full"><a href="W6.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 6</a></li>
-        <li class="w-full"><a href="W7.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 7</a></li>
+        <li class="w-full"><a href="W7.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 7</a></li>
       </ul>
     </div>
 
     <!-- Main Page -->
     <main class="flex-1 p-12">
-      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Homepage</h1>
+      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">GSM-schermen ontwerpen</h1>
       <h2 class="text-[#2d2242] font-medium mb-6">Lana van Dessel</h2>
 
-      <p class="leading-7 text-[1rem] mb-4">
-        Welkom op mijn website over <strong>Prototyping Tools</strong>. Hier laat ik zien wat ik leer in de lessen en hoe ik stap voor stap beter word in het maken van digitale ontwerpen.
-      </p>
+      <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 20 november 2025</p>
 
-      <p class="leading-7 text-[1rem] mb-6">
-        Tijdens deze lessen werk ik met tools zoals <strong>Figma</strong>, <strong>Miro</strong> en <strong>Adobe XD</strong>. Met deze programma’s maak ik digitale prototypes en test ik mijn ideeën voordat ik een definitief ontwerp maak.
+      <p class="leading-7 text-[1.05rem] mb-6">
+        In deze les hebben we ons volledig gericht op het ontwerpen van <strong>gsm-schermen</strong>. 
+        We hebben de hele les hiermee gewerkt, waarbij we alle pagina’s, componenten en stijlen zorgvuldig hebben opgebouwd in Figma.
       </p>
 
       <div class="flex flex-wrap gap-6 mt-6">
+
         <!-- Column 1 -->
         <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
-          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Hoe ik werk</h3>
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik heb gedaan</h3>
+
           <p class="leading-7 mb-4">
-            Ik begin meestal met schetsen op papier. Daarna bouw ik een digitale versie in Figma, waar ik test wat goed werkt. Ik probeer verschillende varianten en kies de beste.
-            Tijdens dit proces leer ik plannen, structureren en ontwerpen met passende stijlen en kleuren.
+            Tijdens de les heb ik gsm-schermen ontworpen, componenten aangemaakt en stijlen toegepast. 
+            We hebben hier bijna de hele les aan gewerkt, zodat elk scherm netjes en overzichtelijk werd.
+          </p>
+
+          <p class="leading-7">
+            Tot slot heb ik tips gekregen om mijn Figma-projecten nog professioneler en overzichtelijker te maken, zodat ze later makkelijk te vertalen zijn naar een werkende website.
           </p>
         </div>
 
         <!-- Column 2 -->
         <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
-          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik leer</h3>
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Reflectie</h3>
+
           <p class="leading-7 mb-4">
-            Door elke week te oefenen, leer ik mijn ideeën om te zetten in echte ontwerpen. Ik leer ook samenwerken, feedback geven en mijn werk presenteren.
+            Het werken met gsm-schermen gaf een goed beeld van hoe ontwerp en functionaliteit samenkomen. 
+            Door de hele les eraan te werken, heb ik veel geleerd over consistentie, lay-out en gebruiksvriendelijkheid.
           </p>
+
           <p class="leading-7">
-            Mijn doel is een duidelijk en aantrekkelijk prototype maken dat toont hoe een app of website werkt.
+            Volgende keer wil ik verder experimenteren met Figma en leren hoe ik mijn gsm-schermen nog beter kan koppelen aan de code voor een werkende website.
           </p>
         </div>
+
       </div>
-
     </main>
-
   </div>
+
 </body>
 </html>
+
